Update gitignore with local dataset and text files

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 /ta-research-topics.pdf
 /ta-term-project(1).pdf
-/Report_draft_temp.pdf
+/Report_draft_temp.pdf.DS_Store
+Dataset/
+Project_Technical_Context.txt
